Data 1060 matchers endpoint rename (#251)
* renamed matcher to matchers endpoint

* updated docs

* endpoint logging fix
