# docs/openapi.json
@@ -1,7 +1,7 @@
 {
   "openapi": "3.0.0",
   "info": {
-    "version": "0.24.0",
+    "version": "0.24.2",
     "title": "Waves Data Service",
     "description": "This is a a public Waves Data Services API documentation. The goal of the API is to provide a simple and convenient way to get data from Waves blockchain."
   },
@@ -36,7 +36,7 @@
       "description": "Service info: version, etc."
     },
     {
-      "name": "matcher",
+      "name": "matchers",
       "description": "Candles, pairs and other trading endpoints"
     }
   ],
@@ -2940,70 +2940,10 @@
         }
       }
     },
-    "/matcher/{matcher}/rates": {
+    "/matchers/{matcher}/pairs/{amountAsset}/{priceAsset}": {
       "get": {
         "tags": [
-          "matcher"
-        ],
-        "summary": "Estimate assets relative assets rate for asset pairs at specific time",
-        "operationId": "estimateRetes",
-        "parameters": [
-          {
-            "name": "matcher",
-            "in": "path",
-            "description": "Matcher address",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "pairs",
-            "in": "query",
-            "description": "`{amountAsset}/{priceAsset}` strings list",
-            "required": false,
-            "schema": {
-              "type": "array",
-              "items": {
-                "type": "string"
-              }
-            }
-          },
-          {
-            "in": "query",
-            "name": "timestamp",
-            "description": "Time to estimate the rates at. Defaults to now.",
-            "schema": {
-              "oneOf": [
-                {
-                  "type": "string",
-                  "format": "date-time"
-                },
-                {
-                  "type": "number"
-                }
-              ]
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Pair info",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ListOfRates"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/matcher/{matcher}/pairs/{amountAsset}/{priceAsset}": {
-      "get": {
-        "tags": [
-          "matcher"
+          "matchers"
         ],
         "summary": "Get pair info by amount and price assets",
         "operationId": "matcherGetPair",
@@ -3048,15 +2988,15 @@
             }
           },
           "400": {
-            "description": "Throws whether assets order in pair is incorrect"
+            "description": "If assets order in pair is incorrect or asset(s) does not exist"
           }
         }
       }
     },
-    "/matcher/{matcher}/pairs": {
+    "/matchers/{matcher}/pairs": {
       "get": {
         "tags": [
-          "matcher"
+          "matchers"
         ],
         "summary": "1) Get list of pairs info by serialized pairs list; 2) Get all list of pairs info by limit (sort by volume in WAVES)",
         "operationId": "matcherGetPairsListAll",
@@ -3136,6 +3076,172 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/ListOfPair"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "If assets order in one of the pairs is incorrect or at least on of the assets does not exist"
+          }
+        }
+      }
+    },
+    "/matchers/{matcher}/candles/{amountAsset}/{priceAsset}": {
+      "get": {
+        "tags": [
+          "matchers"
+        ],
+        "summary": "Get candles by amount and price assets. Maximum amount of candles in response – 1440.",
+        "operationId": "matcherGetCandles",
+        "parameters": [
+          {
+            "name": "matcher",
+            "in": "path",
+            "description": "Matcher address",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "amountAsset",
+            "in": "path",
+            "description": "Asset ID of the amount asset",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "priceAsset",
+            "in": "path",
+            "description": "Asset ID of the price asset",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "in": "query",
+            "name": "timeStart",
+            "description": "Time range filter, start.",
+            "required": true,
+            "schema": {
+              "oneOf": [
+                {
+                  "type": "string",
+                  "format": "date-time"
+                },
+                {
+                  "type": "number"
+                }
+              ]
+            }
+          },
+          {
+            "in": "query",
+            "name": "timeEnd",
+            "description": "Time range filter, end. Defaults to now.",
+            "schema": {
+              "oneOf": [
+                {
+                  "type": "string",
+                  "format": "date-time"
+                },
+                {
+                  "type": "number"
+                }
+              ]
+            }
+          },
+          {
+            "in": "query",
+            "name": "interval",
+            "description": "Candle interval. One of 1d, 12h, 6h, 3h, 1h, 30m, 15m, 5m, 1m.",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "in": "query",
+            "name": "matcher",
+            "description": "Matcher address",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "List of Candles",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ListOfCandle"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Candle not found"
+          }
+        }
+      }
+    },
+    "/matchers/{matcher}/rates": {
+      "get": {
+        "tags": [
+          "matchers"
+        ],
+        "summary": "Estimate assets relative assets rate for asset pairs at specific time",
+        "operationId": "estimateRates",
+        "parameters": [
+          {
+            "name": "matcher",
+            "in": "path",
+            "description": "Matcher address",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "pairs",
+            "in": "query",
+            "description": "`{amountAsset}/{priceAsset}` strings list",
+            "required": false,
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "string"
+              }
+            }
+          },
+          {
+            "in": "query",
+            "name": "timestamp",
+            "description": "Time to estimate the rates at. Defaults to now.",
+            "schema": {
+              "oneOf": [
+                {
+                  "type": "string",
+                  "format": "date-time"
+                },
+                {
+                  "type": "number"
+                }
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Pair info",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ListOfRates"
                 }
               }
             }
